# rekaquant

./: README.md  mypy.ini  pyproject.toml  run_train.slurm
csrc/: fake_cffi_quantize.h  quantize.c  quantize.h
patches/: RekaQuant.patch
scripts/: binarize_quants.py  dequant_gguf_to_hf.py  pad_intermediate.py  prepare_ckpt.sh
src/: train.py
src/utils/: ggml.py  quantize.py
